--- a/login.html
+++ b/login.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登录页面</title>
+    <title>事件系统/登录</title>
+    <!-- 导入自己的样式 -->
+    <link rel="stylesheet" href="/assets/css/login.css"/>
+    <script src="/assets/lib/layui/layui.js"></script>
+    <!-- 导入layui样式 -->
+    <link rel="stylesheet" href="./assets/lib/layui/css/layui.css">
 </head>
 <body>
-    
+    <!-- 头部logo区域 -->
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt=""/>
+    </div> 
+    <!-- 登录注册区域 -->
+    <div class="loginAndRegBox">
+       <div class="title-box">
+           
+           </div>
+        <!-- 登录盒子 -->
+       <div class="login-box">
+           <!-- 登录的表单 -->
+        <form class="layui-form" action="" id="form_login">
+            <!-- 用户名 -->
+            <div class="layui-form-item">
+                <i class="layui-icon layui-icon-user"></i>
+                <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input iconu">
+            </div>
+            <!-- 密码 -->
+            <div class="layui-form-item">
+                <i class="layui-icon  layui-icon-password"></i>
+                <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+            </div>
+            <!-- 登录按钮 -->
+            <button  class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit >立即登录</button>
+
+            <div class="layui-form-item links">
+                <a href="javascript:;" id="link_reg">去注册账号</a>
+            </div>
+        </form>
+       </div>
+       <!-- 注册盒子 -->
+       <div class="reg-box">
+           <!-- 注册的表单 -->
+        <form class="layui-form" id="form_reg">
+            <!-- 用户名 -->
+            <div class="layui-form-item">
+                <i class="layui-icon layui-icon-user"></i>
+                <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input iconu">
+            </div>
+            <!-- 密码 -->
+            <div class="layui-form-item">
+                <i class="layui-icon  layui-icon-password"></i>
+                <input id="pwd" type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+            </div>
+            <!-- 确认密码 -->
+            <div class="layui-form-item">
+                <i class="layui-icon  layui-icon-password"></i>
+                <input type="password" name="repassword" required  lay-verify="required|pwd|repwd" placeholder="请再次输入密码" autocomplete="off" class="layui-input">
+            </div>
+            <!-- 注册按钮 -->
+            <button  class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit >立即注册</button>
+
+            <div class="layui-form-item links">
+                <a href="javascript:;" id="link_login">去登录</a>
+            </div>
+        </form>
+       </div>
+    </div>
+    <!-- 导入layui的js文件 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 导入jQuery -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 导入baseapi.js -->
+    <script src="/assets/js/baseaoi.js"></script>
+    <!-- 导入自己的script脚本 -->
+    <script src="/assets/js/login.js"></script>
 </body>
 </html>
