完成个人中心功能的开发

--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
     <!-- 导入jQuery -->
     <script src="/assets/lib/jquery.js"></script>
     <!-- 导入baseapi.js -->
-    <script src="/assets/js/baseaoi.js"></script>
+    <script src="/assets/js/baseapi.js"></script>
     <!-- 导入自己的script脚本 -->
     <script src="/assets/js/login.js"></script>
 </body>
