--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
               个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置密码</a></dd>
+              <dd><a href="/user/user_info.html" target="fm"> 基本资料</a></dd>
+              <dd><a href="/user/user_avatar.html"target="fm">更换头像</a></dd>
+              <dd><a href="/user/user_pwd.html" target="fm">  重置密码</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span class="iconfont" >&#xe865; </span>退出</a></li>
@@ -56,9 +56,9 @@
             <li class="layui-nav-item">
               <a href="javascript:;"><span class="iconfont">&#xe614; </span>个人中心</a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                <dd><a href="/user/user_info.html" target="fm"> <i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
+                <dd><a href="/user/user_avatar.html"target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                <dd><a href="/user/user_pwd.html" target="fm">  <i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
               </dl>
             </li>
           </ul>
@@ -76,10 +76,11 @@
       </div>
     </div>
     </body>
+    <!-- 导入layui的js -->
     <script src="/assets/lib/layui/layui.all.js"></script>
     <!-- 导入jQuery -->
     <script src="/assets/lib/jquery.js"></script>
-    <script src="/assets/js/baseaoi.js"></script>
+    <script src="/assets/js/baseapi.js"></script>
     <!-- 导入自己的js -->
     <script src="/assets/js/index.js"></script>
 </html>
